NCL7800 Implement Build Artifact Graph REST API
