# rest-api/pnc-openapi.yaml
@@ -2170,6 +2170,43 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /builds/{id}/artifacts/dependency-graph:
+    get:
+      tags:
+      - Builds
+      summary: "Finds Builds which produced Artifact dependencies and Builds which\
+        \ depend on produced Artifacts of a requested Build, and recursively so for\
+        \ those Builds to create a graph of build-time artifact dependencies. Maximum\
+        \ depth limit is 5."
+      operationId: getBuildArtifactDependencyGraph
+      parameters:
+      - name: id
+        in: path
+        description: ID of the build
+        required: true
+        schema:
+          type: string
+      - name: depthLimit
+        in: query
+        schema:
+          type: integer
+          format: int32
+          default: 5
+      responses:
+        "200":
+          description: Success with results
+        "400":
+          description: Invalid input parameters or validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /builds/{id}/attributes:
     post:
       tags:
